# QLogo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Icon.icns  LICENSE  Psychi.appdata.xml  Psychi.desktop  QLogo-GUI.appdata.xml  QLogo-GUI.desktop  QLogo.appdata.xml  QLogo.desktop  QLogo.pro  README  README.md  README.org  TestQLogo.pro  canvas.cpp  canvas.h  changes.txt  console.cpp  console.h  constants.h  controller.cpp  controller.h  datum.cpp  datum.h  datum_array.cpp  datum_array.h  datum_astnode.cpp  datum_astnode.h  datum_datump.cpp  datum_datump.h  datum_iterator.cpp  datum_iterator.h  datum_list.cpp  datum_list.h  datum_object.cpp  datum_word.cpp  (+60 more)
.github/workflows/: build.yml  clang-tidy.yml  cmake-lint.yml  tests.yml
Psychi/: CMakeLists.txt  canvas.cpp  console.cpp  editorwindow.cpp  mainwindow.cpp  psychi_main.cpp  qlogo_main.cpp
QLogo-GUI/: CMakeLists.txt  canvas.cpp  console.cpp  editorwindow.cpp  mainwindow.cpp  mainwindow.ui  qlogo_main.cpp
blacklisted_tests/: 1_README_BLACKLISTED_TESTS.md  APPLY_3.lg  ARITY_4.lg  BURY_1.result  BURY_3.result  DEFINE_2.result  DEFINE_5.result  DRIBBLE.lg  FIRSTS_list.lg  FULLPRINTP_2.result  FULLTEXT_3.lg  FULLTEXT_3.result  FULLTEXT_5.lg  FULLTEXT_7.lg  MAYBE_PRINT_error.result  NAMEP_3.lg  NAMES_1.result  PLISTS_2.lg  PLIST_4.lg  PO_Macro.lg  PRIMITIVEP_1.lg  PRINTDEPTHLIMIT_1.lg  PRINTDEPTHLIMIT_1.result  PRINTDEPTHLIMIT_2.lg  PRINTOUT_2.result  PRINTOUT_3.lg  PRINTWIDTHLIMIT_2.result  PROCEDUREP_1.lg  PROCEDUREP_3.lg  PROCEDURES_2.result  READLIST_expression.lg  READRAWLINE.lg  READWORD.result  STEP_1.lg  TEXT_1.lg  TEXT_2.lg  TEXT_4.lg  TEXT_5.result  THROW_5.lg  TRACEDP_5.lg  (+19 more)
icons/: QLogo-GUI.icns  qlogo_icon_1024.xcf
include/: astnode.h  callframe.h  cmd_strings.h  compiler.h  compiler_internal.h  compiler_private.h  compiler_types.h  datum.h  datum_astnode.h  datum_core.h  datum_ptr.h  datum_types.h  error.h  exports.h  flowcontrol.h  help.h  kernel.h  library.h  logocontrollergui.h  mainwindow.h  op_strings.h  parser.h  primitives.h  procedurehelper.h  procedures.h  propertylists.h  runparser.h  sharedconstants.h  stringblock.h  stringconstants.h  treeifyer.h  turtle.h  vars.h  visited.h
include/controller/: inputqueue.h  logocontroller.h  logocontrollergui.h  logointerface.h  logointerfacegui.h  textstream.h
include/datum/: array.h  astnode.h  datum.h  datump.h  iterator.h  list.h  word.h
include/gui/: canvas.h  console.h  editorwindow.h  mainwindow.h
include/interface/: inputqueue.h  logointerface.h  textstream.h  (+1 more)
oldTest/: APPLY_1.result  APPLY_2.lg  APPLY_2.result  APPLY_4.result  APPLY_5.result  APPLY_6.result  ARITY_6.lg  BURIEDP_4.lg  BURY_2.lg  BUTFIRSTS_list.result  BUTFIRST_list_2.lg  CONTENTS_2.lg  CONTENTS_2.result  DEFINEDP_3.lg  DEFINEDP_5.result  DEFINE_1.result  DEFINE_3.lg  ERPLS_1.result  Escape_Sequence.lg  FIRST_array_1.result  FPUT_list.lg  LAST_word.lg  LISTTOARRAY.lg  MAYBE_WORD.result  MEMBERP_1.lg  MEMBERP_6.result  NUMBERP_3.lg  OUTPUT_1.result  OUTPUT_3.lg  PARSE_3.lg  PLIST_2.lg  PLIST_2.result  PLIST_3.result  PLIST_7.lg  PLIST_8.lg  POT_2.result  POT_3.result  PRINTDEPTHLIMIT_3.lg  PRINTOUT_1.lg  PRINTOUT_ERROR_1.lg  (+52 more)
qlogo/: CMakeLists.txt  kernel.cpp  logo_main.cpp
qlogo/compiler/: compiler.cpp  compiler_arithmetic.cpp  compiler_communication.cpp  compiler_controlstructures.cpp  compiler_datastructureprimitives.cpp  compiler_graphics.cpp  compiler_specialvariables.cpp  compiler_workspacemanagement.cpp
qlogo/controller/: README.md  inputqueue.cpp  logocontroller.cpp  logocontrollergui.cpp  logointerface.cpp  logointerfacegui.cpp  textstream.cpp
qlogo/datum/: datum.cpp  datum_array.cpp  datum_astnode.cpp  datum_datump.cpp  datum_flowcontrol.cpp  datum_iterator.cpp  datum_list.cpp  datum_word.cpp  error.cpp
qlogo/executor/: README.md  arithmetic.cpp  communication.cpp  controlstructures.cpp  datastructureprimitives.cpp  graphics.cpp  kernel.cpp  kernel_arithmetic.cpp  kernel_communication.cpp  kernel_controlstructures.cpp  kernel_datastructureprimitives.cpp  kernel_graphics.cpp  kernel_workspacemanagement.cpp  workspacemanagement.cpp
qlogo/interface/: README.md  inputqueue.cpp  logointerface.cpp  logointerfacegui.cpp  textstream.cpp
qlogo/misc/: exports.cpp  help.cpp  library.cpp  procedurehelper.cpp  stringconstants.cpp  turtle.cpp  visited.cpp
qlogo/parser/: README.md  cmd_strings.cpp  op_strings.cpp  parser.cpp  runparser.cpp  treeifyer.cpp
qlogo/workspace/: README.md  callframe.cpp  exports.cpp  kernel.cpp  library.cpp  parser.cpp  procedures.cpp  propertylists.cpp  turtle.cpp  vars.cpp  visited.cpp  workspace.cpp
resources/: Psychi.rc  QLogo-GUI.rc
scripts/: generate_help.py  install-git-hooks.sh  run-clang-tools.sh
share/: qlogo_help.db  qlogo_library.db
src/QLogo-GUI/: CMakeLists.txt  editorwindow.cpp  editorwindow.ui  mainwindow.cpp  qlogo_main.cpp
src/qlogo/: CMakeLists.txt  logo_main.cpp
src/qlogo/controller/: qlogocontroller.cpp
src/qlogo/executor/: kernel.cpp  kernel_controlstructures.cpp  kernel_workspacemanagement.cpp
src/qlogo/misc/: help.cpp
src/qlogo/workspace/: parser.cpp  propertylists.cpp  vars.cpp
test/: ALSE_1.lg  ALSE_1.result  AND_1.lg  AND_2.lg  AND_4.lg  AND_7.lg  AND_and_NOT_list.lg  APPLY_4.lg  APPLY_5.lg  APPLY_6.lg  APPLY_7.result  APPLY_8.lg  APPLY_8.result  ARCTAN_2.lg  ARCTAN_3.lg  ARCTAN_3.result  ARCTAN_4.lg  ARCTAN_4.result  ARCTAN_6.result  ARITY_1.result  ARITY_2.lg  ARITY_2.result  ARITY_3.lg  ARITY_3.result  ARITY_4.result  ARITY_5.lg  ARITY_5.result  ARITY_6.result  ARRAY.lg  ARRAY.result  ARRAYP_array.lg  ARRAYTOLIST.lg  ARRAYTOLIST.result  ASCII_1.lg  ASCII_1.result  ASCII_3.lg  ASCII_4.lg  ASHIFT_1.lg  ASHIFT_2.result  ASHIFT_3.lg  (+651 more)
util/: CMakeLists.txt  README.md  command_parser.py  createDesktopIcons.sh  createICNS.sh  createIco.sh  gen_help.cpp  generate_command_table.py  generate_help.py  generate_library.py  generate_primitive_mappings.py  generate_string_constants.py  install-git-hooks.sh  logolib.json  logolib_help.json  run-clang-tools.sh
util/git-hooks/: pre-commit
(+276 files in other folders)
